--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -147,3 +147,34 @@
   year={1997},
   publisher={American Psychological Association}
 }
+
+
+@article{carman2015effectiveness,
+  title={Effectiveness of public deliberation methods for gathering input on issues in healthcare: results from a randomized trial},
+  author={Carman, Kristin L and Mallery, Coretta and Maurer, Maureen and Wang, Grace and Garfinkel, Steve and Yang, Manshu and Gilmore, Dierdre and Windham, Amy and Ginsburg, Marjorie and Sofaer, Shoshanna and others},
+  journal={Social Science \& Medicine},
+  volume={133},
+  pages={11--20},
+  year={2015},
+  publisher={Elsevier}
+}
+
+
+@article{landemore2012many,
+  title={Why the many are smarter than the few and why it matters},
+  author={Landemore, Helene E},
+  journal={Journal of public deliberation},
+  volume={8},
+  number={1},
+  pages={7},
+  year={2012}
+}
+
+@article{knobloch2014empowering,
+  title={Empowering citizen deliberation in direct democratic elections: A field study of the 2012 Oregon Citizens? Initiative Review},
+  author={Knobloch, Katherine R and Gastil, John and Feller, Traci and Richards, Robert C and others},
+  journal={Field Actions Science Reports. The journal of field actions},
+  number={Special Issue 11},
+  year={2014},
+  publisher={Institut Veolia}
+}
