--- a/doc/evidence_policy.tex
+++ b/doc/evidence_policy.tex
@@ -149,7 +149,7 @@
 
 \begin{abstract}
 \noindent
-Despite representing one of the most common forms of direct democracy around the world, studies of voter persuasion efforts in ballot initiatives remain scarce. These direct democratic efforts have been hypothesized to improve the quality and legitimacy of policy decisions by some, and to lead to poor policy outcomes due to special interest capture and lack of technical knowledge by others. In order to test these hypotheses empirically, we propose a field experiment examining voting outcomes on citizen initiated ballot propositions following randomized treatment of proposition endorsement or opposition by special interest groups and and policy experts during the 2020 California state elections. We seek to test whether citizens acting as policy makers give more credence to high quality policy research versus special interest information. In addition, we will replicate our field experiment with a survey experiment using identical subjects, treatments, and outcome measures.
+Despite representing one of the most common forms of direct democracy around the world, studies of voter persuasion efforts in ballot initiatives remain scarce. These direct democratic efforts have been hypothesized to improve the quality and legitimacy of policy decisions by some, and to lead to poor policy outcomes due to special interest capture and lack of technical knowledge by others. In order to test these hypotheses empirically, we propose a field experiment examining voting outcomes on citizen initiated ballot propositions following randomized treatment of proposition endorsement or opposition by special interest groups and policy experts during the 2020 California state elections. We seek to test whether citizens acting as policy makers give more credence to high quality policy research versus special interest information. In addition, we will replicate our field experiment with a survey experiment using identical subjects, treatments, and outcome measures.
 \vspace{6cm}
 \end{abstract}
 
@@ -160,15 +160,17 @@ Despite representing one of the most common forms of direct democracy around the
 
 \section{Introduction} \label{sec:Introduction}
 
-One of the most direct ways in which citizens can produce policy is through pure democratic channels such as citizens initiatives, popular consultation, and ballot initiatives. Ballot initiatives have been hailed as an efficient direct democracy mechanism, providing citizens with a much-needed voice in policy making and politics. Defenders of ballot initiatives claim that they provide a way for citizens to voice their opinions and produce policies with less interference from parties and special interests \citep{cronin1999direct}. Others caution against the excesses of direct democracy and claim that special interest capture also operates in this system \citep{rosenbluth2018responsible}. Doubts about voters' competency are also central to whether ballot initiatives lead to adoption of good policies \citep{achen2017democracy}. The need for technical knowledge may be larger on a ballot initiative than in a traditional partisan election as fewer heuristic cues are available. 
+One of the most direct ways in which citizens can produce policy is through pure democratic channels such as citizens initiatives, popular consultation, and ballot initiatives. Ballot initiatives have been hailed as an efficient direct democracy mechanism, providing citizens with a much-needed voice in policy making and politics. Defenders of ballot initiatives claim that they provide a way for citizens to voice their opinions and produce policies with less interference from parties and special interests \citep{cronin1999direct}. Others caution against the excesses of direct democracy and claim that special interest capture also operates in this system \citep{rosenbluth2018responsible}. Doubts about voters' competency are also central to whether ballot initiatives lead to adoption of good policies \citep{achen2017democracy}. The need for technical knowledge may be larger on a ballot initiative than in a traditional partisan election, as fewer heuristic cues are available to voters.  
 
-We therefore seek to determine how voters use information when asked to vote directly on a supposedly non-partisan, technical policy proposal placed on a ballot initiative. Are voters able to distinguish between the different levels of information quality and bias that stem from varying sources of information? Relatedly, do ballot initiatives actually lead to less interference from parties and special interests, or are voters equally swayed by special interests cues and objective policy research? 
+We seek to determine how voters use information when asked to vote directly on a supposedly non-partisan, technical policy proposal placed on a ballot initiative. Are voters able to distinguish between the different levels of information quality and bias that stem from varying sources of information? Relatedly, do ballot initiatives actually lead to less interference from parties and special interests, or are voters equally swayed by special interests cues and objective policy research? 
 
-We propose a field experiment examining voting outcomes on citizen initiated ballot propositions following randomized treatment of proposition endorsement or opposition by special interest groups and and policy experts during the 2020 California state elections. We seek to test whether citizens acting as policy makers give more credence to high quality policy research versus overtly partisan or biased information (i.e. special interests). In addition, we will replicate our field experiment with a survey experiment using identical subjects, treatments, and outcome measures.
+We propose a field experiment examining voting outcomes on a citizen initiated ballot proposition following randomized treatment of proposition endorsement or opposition by special interest groups and policy experts during the 2020 California elections. We seek to test whether citizens acting as policy makers give more credence to high quality policy research versus overtly partisan or biased information (i.e. special interests). In addition, we will replicate our field experiment with a survey experiment using identical subjects and treatments.
 
-The paper will contribute to the growing literature on the effect of campaign outreach on vote choice. Meta-analysis by \citet{kalla2018minimal} suggests that the effect of campaign contact and advertising on voting outcomes is close to zero in general elections. However, effects do seem to appear in non-partisan ballot measure campaigns, but few experiments exist on this topic. All ballot initiative experiments to date contact voters through a single advocacy group with a clear policy position. However, we know little about whether the quality and/or source of the information provided changes the efficiency of these messages. By contrast, our experimental design allows us to speak to the debate over whether direct democracy is actually more democratic than representative democracy, or if it suffers from the same elite manipulation might operate in both domains.
+The paper will also contribute to the growing literature on the effect of campaign outreach on vote choice. Meta-analysis by \citet{kalla2018minimal} suggests that the effect of campaign contact and advertising on voting outcomes is close to zero in general elections. However, effects do seem to appear in non-partisan ballot measure campaigns, but few experiments exist on this topic. Moreover, all existing ballot initiative experiments contacted voters through a single advocacy group with a clear policy position. We know little about whether the quality and/or source of the information provided changes the efficiency of these messages. 
+
+%By contrast, our experimental design allows us to speak to the debate over whether direct democracy is actually more democratic than representative democracy, or if it suffers from the same elite manipulation might operate in both domains.
  
- A growing literature also suggests that survey experimental results often do not replicate in the field. For example, the zero effect of campaign contact in \citet{kalla2018minimal} does not replicate in survey experiments, and a recent meta analysis of the effects of providing voters with information about the corrupt actions of politicians shows an approximately zero effect in field experiments versus large negative effects in survey environments \citep{incerti2019corruption}. By contrast, we hypothesize that survey experiments should better approximate the context of ballot initiatives as: (1) the vote choices are real ballot propositions rather than hypothetical candidates, and (2) partisan cues are less prevalent in (technical) ballot proposals. Whether our hypothesis is correct or incorrect, we will contribute to the growing understanding of the contexts and questions in which survey experiments replicate or do not replicate in the real world.
+ A growing literature also suggests that survey experimental results often do not replicate in the field. For example, the zero effect of campaign contact in \citet{kalla2018minimal} does not replicate in survey experiments, and a recent meta analysis of the effects of providing voters with information about the corrupt actions of politicians shows an approximately zero effect in field experiments versus large negative effects in survey environments \citep{incerti2019corruption}. By contrast, we hypothesize that survey experiments should better approximate the context of real-world ballot initiatives as: (1) the vote choices are real ballot propositions rather than hypothetical candidates, and (2) partisan cues are less prevalent in (technical) ballot proposals. Whether our hypothesis is correct or incorrect, we will contribute to the growing understanding of the contexts and questions in which survey experiments replicate or do not replicate in the real world. Conducting a survey experiment will also allow us to get into potential mechanisms behind our primary outcome (voting decisions), as we will also ask the respondents factual questions on the policy topic on which they were asked to make a decision.
 
 
 \section{Theory} \label{sec:Theory}
@@ -177,22 +179,28 @@ The paper will contribute to the growing literature on the effect of campaign ou
 
 This project speaks to broader theoretical questions on the functioning of our current democracies, and in particular the potential gaps between reality and the ideals of deliberative democracies. We hope to contribute to ongoing discussions within philosophy of science, such as perceptions of research methods and consumption of scientific evidence outside of the academy. \\
 
-[Tensions and relationships between science and democracy]
 
 \subsection{Ballot initiatives and direct democracy}
 
 Direct democracy at the US state-level is extremely prevalent yet understudied. 31 of 50 states permit referendums of some kind, and 24 permit citizen initiatives \citep{leduc2003politics}. Of these 24 states, California engages in more individual exercises of direct democracy than any other. Over the past two decades California has voted on X ballot initiatives at the statewide level [compare to other states], and the number of ballot initiatives per election has increased rapidly over the same period.
 
-Some scholars view this growth of direct democracy as a positive extension of democratic values [CITE AND ADD MORE- SEE LEDUC, HELENE?]. Theoretical arguments... Empirically, participation in ballot initiatives is associated with an increased capacity to correctly answer factual questions about politics \citep{smith2002ballot}.
+\bigbreak
 
-Others contend that the initiative process in the United States has been captured by special interest groups, directly undermining the increased power ballot initiatives are designed to deliver to citizens \citep{stratmann2004effectiveness} [CITE MORE - SEE LEDUC]. This implies that the outcomes of direct democracy are no more democratic than representative democracy, as the same elite manipulation that might operate in both domains. This hypothesis is contested, however, with some observational empirical work showing a null or even negative effect of special interest spending on initiative outcomes \citep{gerber1999populist}. Our research design allows us to evaluate the special interest capture theory by comparing the efficacy of special interest messages to those of independent policy analysts.
+Some scholars view this growth of direct democracy as a positive extension of democratic values, providing citizens with a much-needed voice in policy making and politics. Defenders of ballot initiatives claim that they provide a way for citizens to voice their opinions and produce policies with less interference from parties and special interests \citep{cronin1999direct}. They allow the collective intelligence of the people in politics \citep{landemore2012many} to lead to better decisions. 
+
+Empirically, participation in ballot initiatives is associated with an increased capacity to correctly answer factual questions about politics \citep{smith2002ballot}. There is also some evidence that voters are responsive to some types of information (synthesis of a Citizen Assembly held on the topic received in their voters pamphlets) \citep{carman2015effectiveness}. 
+
+\bigbreak
+
+Others contend that the initiative process in the United States has been captured by special interest groups, directly undermining the increased power ballot initiatives are designed to deliver to citizens \citep{stratmann2004effectiveness, rosenbluth2018responsible}. Doubts about voters' competency are also central to whether ballot initiatives lead to adoption of good policies \citep{achen2017democracy}. The need for technical knowledge may be larger on a ballot initiative than in a traditional partisan election as fewer heuristic cues are available. 
+%[CITE MORE - SEE LEDUC]. 
+
+This implies that the outcomes of direct democracy are no more democratic than representative democracy, as the same elite manipulation can operate in both domains. This hypothesis is contested, however, with some observational empirical work showing a null or even negative effect of special interest spending on initiative outcomes \citep{gerber1999populist}. Our research design allows us to evaluate the special interest capture theory by comparing the efficacy of special interest messages to those of independent policy analysts.
 
 Ballot initiatives have also been identified as a source of major policy blunders. One of the most notorious of these blunders is California's Proposition 13 of 1978, which capped annual increases of real property taxes to 2 percent per year and prohibited governments from increasing property taxes without a further referendum. Proposition 13 has been blamed for underfunding of California public schools, contributing to California's housing crisis, and perpetuating income inequality in the state [CITE]. Proposition 13 was not without its critics at the time of passage, with critics contending that ``Proposition 13 raises serious questions about the feasibility of participatory democracy in a policy area which commonly has been dominated by experts'' \citep{mccaffery1978participatory}. In this context, our experimental design allows us to test whether voters are receptive to expert policy analysis of ballot referendum policies. 
 
 In line with the partisan and special interest capture theories, as well as evidence that ballot initiatives often lead to policy blunders, our primary hypothesis is that \textit{voters will be equally swayed by information from special interest groups and policy researchers.} More formally, we expect the absolute value of special interest and policy research treatment effects to be statistically indistinguishable from one another.
 
-
-%\citet{rosenbluth2018responsible} argue that decentralization of power to the grass roots level has worsened the quality of policy outputs and decision making in the United States by weakening parties.
 
 \subsection{Current experimental evidence}  \label{sec: contact experiments}
 
@@ -222,21 +230,25 @@ We will provide voters with different randomized pieces of information encouragi
 
 \subsection{Treatment details} \label{sec:Treatment}
 
-This information provision could be done through mail (a postcard), canvassing, phone calls, text messaging, or emails. Postcards, text messaging, or email would allow for larger sample sizes than canvassing or phone calls. Extant literature on fliers as a persuasive source of information finds null treatment effects \citep{kalla2018minimal, incerti2019corruption}. However, it may be possible to improve upon previous field experiments by incorporating estimates of non-compliance rates into our experimental design, allowing us to estimate complier average causal effects (CACE) in addition to intent-to-treat (ITT) effects. For example, fliers could contain a link to a website with the informational treatment (ideally with some sort of monetary incentive, such as the possibility to enter a lottery). We would then be able to use the percentage of individuals who received fliers that also accessed the website as an estimate of the proportion of compliers. This would allow us to measure the effect of \textit{reading} the informational treatment, rather than the effect of being assigned to the treatment group receiving the information. 
+This information provision could be done through mail (a postcard), canvassing, phone calls, text messaging, or emails. Postcards, text messaging, or email would allow for larger sample sizes than canvassing or phone calls. Extant literature on fliers as a persuasive source of information finds null treatment effects \citep{kalla2018minimal, incerti2019corruption}, but the evidence in the context of ballot initiatives is more mixed. 
+
+Moreover, it may be possible to improve upon previous field experiments by incorporating estimates of non-compliance rates into our experimental design, allowing us to estimate complier average causal effects (CACE) in addition to intent-to-treat (ITT) effects. For example, fliers could contain a link to a website with the informational treatment (ideally with some sort of monetary incentive, such as the possibility to enter a lottery). We would then be able to use the percentage of individuals who received fliers that also accessed the website as an estimate of the proportion of compliers. This would allow us to measure the effect of \textit{reading} the informational treatment, rather than the effect of being assigned to the treatment group receiving the information. 
 
 Canvassing would provide us with less power, less geographic reach, and would likely be costlier. However, direct contact has been shown to elicit larger treatment effects than other forms of communication \citep{kalla2018minimal}.
+
+In both cases (mail or canvassing), we will consider the possibility of partnering with a third party organization. If we send postcards for example, the source of the postcard will become a crucial part of the design. If we do not want our experiment to be about messenger effects (i.e. if we want it to be exclusively about the content, and not the source), then both treatments (interest group and expert messages) should come from the same source. We could also decide that the source of the information is part of the treatment we are interested in studying, in which case we could use different sources. 
 
 \subsection{Outcomes} \label{sec: Outcomes}
 
 Our outcome measurement is percentage of ``Yes'' votes on the ballot initiative at the precinct or smaller level. This constitutes a theoretically direct outcome measurement, considering that we are interested in examining how susceptible voters in a direct democracy setting are to information campaigns by different groups. 
 
-As our outcome is ``Yes" vote and we will provide one pro-initiative treatment and one negative anti-initiative treatment, we should illicit one positive treatment effect and one negative. If the absolute values of the treatment effects are the same, that supports the capture hypothesis (i.e. people weigh both sources of information equally). If the business treatment is smaller in absolute value, it disproves the capture hypothesis and suggests that people value research more than potentially biased information.
+As our outcome is ``Yes" vote and we will provide one pro-initiative treatment and one negative anti-initiative treatment, we should illicit one positive treatment effect and one negative. If the absolute values of the treatment effects are the same, or if the business treatment is higher in absolute value, that supports the capture hypothesis (i.e. people weigh both sources of information equally). If the business treatment is smaller in absolute value, it disproves the capture hypothesis and suggests that people value research more than potentially biased information.
 
 \subsection{Election cycle and choice of ballot measure} \label{sec:policy}
 
 We seek to launch this experiment during the 2020 California statewide general election. An on-year election will give us access to a larger sample of likely voters in total, as well as a greater percentage of voters without strong priors on the specific proposal. Off-year voters tend to be more informed about specific ballot measures and therefore have stronger priors and are less susceptible to informational campaigns. 
 
-Our ideal ballot measure would involve a policy with a scientific or policy research consensus on its overall merit or demerit. This would likely represent a technical subject on which people have relatively weak priors. For example: Health care, housing, etc. A list of 2020 California ballot measures or those approved by yet to meet the minimum signature threshold eligible or requiring additional is provided in \autoref{tab: initiatives}.
+Our ideal ballot measure would involve a policy with a scientific or policy research consensus on its overall merit or demerit. This would likely represent a technical subject on which people have relatively weak priors. Policy issues such as health care or housing could work very well for our purposes. A list of 2020 California ballot measures or those approved by yet to meet the minimum signature threshold eligible or requiring additional is provided in \autoref{tab: initiatives}.
 
 \begin{table}[!htbp] \centering 
   \caption{Potential 2020 California ballot initiatives as of June 2019}
@@ -268,7 +280,10 @@ Elimination of Open Ended Alimony & Legal & NA & No & No \\
 
 \subsection{Estimation of treatment effects} \label{sec:treatment_effects}
 
-We intend to use clustered random assignment rather than individual-level randomization, i.e assigning voting precints to treatment and control rather than individual nested within them. Following \citet{arceneaux2005using}'s advice, we argue that such an approach is not only easier and potentially less expensive to implement, it also opens the door to clearer analyses without the need for survey data (information on individual voting decisions is not publicly available).
+We intend to use clustered random assignment rather than individual-level randomization, i.e assigning voting precincts to treatment and control rather than individual nested within them. Following \citet{arceneaux2005using}'s advice, we argue that such an approach is not only easier and potentially less expensive to implement, it also opens the door to clearer analyses without the need for survey data (information on individual voting decisions is not publicly available).
+To compensate for the loss of statistical power involved with the use of clusters, we will use covariates such as past voting behaviours, age, gender and party registration (and all other variables available in the voters files that are in any way predictive of one's vote on a ballot initiative).
+
+
 
 
 %Treatment effect estimates will therefore be calculated as the difference-in-means of the response rate from subjects in each of treatment groups and the response rate from subjects in the control group in each block, weighted by the number of subjects in each block relative to the total number of subjects. More formally, average treatment effects will be estimated as:
@@ -283,19 +298,26 @@ We intend to use clustered random assignment rather than individual-level random
 
 
 \subsection{Power analysis} \label{sec: power}
-\citet{bloom1999using} and \citet{raudenbush1997statistical} provided excellent illustrations of power analysis for cluster random assignment.
+\citet{bloom1999using} and \citet{raudenbush1997statistical} provided excellent illustrations of power analysis for cluster random assignment. We can also rely on existing field experiments conducted during an election and using precincts as clusters. This power analysis will allow us to evaluate how many clusters (i.e. precincts) we will need to make this experiment worth conducting. 
 
 \section{Survey experiment} \label{sec:Design survey}
 
 \subsection{Why conduct a survey experiment?} \label{sec: questions}
 
- A growing literature suggests that survey experimental results often do not replicate in the field. By contrast, we hypothesize that survey experiments should better approximate the context of ballot initiatives as: (1) the vote choices are real ballot propositions rather than hypothetical candidates, and (2) partisan cues are less prevalent in (technical) ballot proposals. The ballot initiative setting would allow us to design the survey so that it exactly replicates the field setting, with the only differences being hypothetical vote choice versus actual.
+Conducting a survey experiment in complement of the field experiment will provide at least two benefits: (i) substantially, explore some potential mechanisms and (ii) methods wise, contribute to the growing literature on the replicability of survey experiments results in the field. 
+
+Substantially, a survey experiment allows us to add a set of outcome variables: in addition to asking participants whether they would vote yes or no on the issue, we could ask them basic factual questions on the policy topic. If we find differences in our primary outcome (voting decision), adding this second set of outcomes could help us test whether this difference in voting can be partly explained by a difference in the understanding of the issue. 
+\citet{knobloch2014empowering} study the impact of a Citizen Assembly in Oregon and the presence of a synthesis of the Assembly in the voters pamphlets. A state-wide survey shows that voters seemed to read and appreciate the synthesis, and they conduct a survey experiment to show that the synthesis lead to higher knowledge level on the issue than other sources of information (interest group, neutral informational by government). But they do not study vote as the outcome variable of interest, and do not have a field experiment. 
+\bigbreak
+A second reason to do a survey experiment is to contribute to a methods question. A growing literature suggests that survey experimental results often do not replicate in the field. By contrast, we hypothesize that survey experiments should better approximate the context of ballot initiatives as: (1) the vote choices are real ballot propositions rather than hypothetical candidates, and (2) partisan cues are less prevalent in (technical) ballot proposals. The ballot initiative setting would allow us to design the survey so that it exactly replicates the field setting, with the only differences being hypothetical vote choice versus actual.
  
 Whether our hypothesis is correct or incorrect, we will contribute to the growing understanding of the contexts and questions in which survey experiments replicate or do not replicate in the real world. If our hypothesis is correct, we can open the door for more survey experiments with more varied and ambitious treatments. If our hypothesis is incorrect, we show that survey experiments do not replicate even in a context where they closely approximate the field environment.
 
 \subsection{Design} \label{sec: questions}
 
-The ballot initiative setting would allow us to create a survey experiment in which the subjects, treatment, and outcome variable are identical to those in the field setting. In other words, we could sample from the same population, use the same informational treatments that would be sent to voters in the field setting, and measure the same outcome---vote choice---with the exception that the outcome is real in the field setting and hypothetical in the survey setting. 
+The ballot initiative setting would allow us to create a survey experiment in which the subjects, treatment, and outcome variable are identical to those in the field setting. In other words, we could sample from the same population, use the same informational treatments that would be sent to voters in the field setting, and measure the same outcome---vote choice---with the exception that the outcome is real in the field setting and hypothetical in the survey setting. We would then simply add a set of basic factual questions as a second set of outcomes. 
+
+
 
 \section{Natural experiment} \label{sec:natural}
 
@@ -307,7 +329,7 @@ We could also potentially leverage the signature requirement thresholds to put a
 
 \section{Conclusion} \label{sec:Conclusion}
 
-Our next steps on this project include finalization of some of the research design decisions that remain open (i.e. choice of ballot initiative, location and creation of informational messages, possible partnership with organizations to send the messages). We hope to finalize these details over the summer and to preregister a final Pre-Analysis-Plan with EGAP by the end of 2019. We would then conduct the experiment immediately prior to the 2020 California state general elections.
+Our next steps on this project include finalization of some of the research design decisions that remain open (i.e. choice of ballot initiative, location and creation of informational messages, possible partnership with organizations to send the messages) and the power analysis. We hope to finalize these details over the summer and to preregister a final Pre-Analysis-Plan with EGAP by the end of 2019. We would then conduct the experiment immediately prior to the 2020 California state general elections. 
 
 
 
