--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -178,3 +178,22 @@
   year={2014},
   publisher={Institut Veolia}
 }
+
+@techreport{wasi2005property,
+  title={Property tax limitations and mobility: The lock-in effect of California's Proposition 13},
+  author={Wasi, Nada and White, Michelle J},
+  year={2005},
+  institution={National Bureau of Economic Research}
+}
+
+
+@article{catterall1985proposition,
+  title={Proposition 13: Effects on high school curricula, 1978-1983},
+  author={Catterall, James S and Brizendine, Emily},
+  journal={American Journal of Education},
+  volume={93},
+  number={3},
+  pages={327--351},
+  year={1985},
+  publisher={The University of Chicago Press}
+}
