--- a/doc/evidence_policy.tex
+++ b/doc/evidence_policy.tex
@@ -197,7 +197,7 @@ Others contend that the initiative process in the United States has been capture
 
 This implies that the outcomes of direct democracy are no more democratic than representative democracy, as the same elite manipulation can operate in both domains. This hypothesis is contested, however, with some observational empirical work showing a null or even negative effect of special interest spending on initiative outcomes \citep{gerber1999populist}. Our research design allows us to evaluate the special interest capture theory by comparing the efficacy of special interest messages to those of independent policy analysts.
 
-Ballot initiatives have also been identified as a source of major policy blunders. One of the most notorious of these blunders is California's Proposition 13 of 1978, which capped annual increases of real property taxes to 2 percent per year and prohibited governments from increasing property taxes without a further referendum. Proposition 13 has been blamed for underfunding of California public schools, contributing to California's housing crisis, and perpetuating income inequality in the state [CITE]. Proposition 13 was not without its critics at the time of passage, with critics contending that ``Proposition 13 raises serious questions about the feasibility of participatory democracy in a policy area which commonly has been dominated by experts'' \citep{mccaffery1978participatory}. In this context, our experimental design allows us to test whether voters are receptive to expert policy analysis of ballot referendum policies. 
+Ballot initiatives have also been identified as a source of major policy blunders. One of the most notorious of these blunders is California's Proposition 13 of 1978, which capped annual increases of real property taxes to 2 percent per year and prohibited governments from increasing property taxes without a further referendum. Proposition 13 has been blamed for underfunding of California public schools, contributing to California's housing crisis, and perpetuating income inequality in the state \citep{wasi2005property, catterall1985proposition}. Proposition 13 was not without its critics at the time of passage, with critics contending that ``Proposition 13 raises serious questions about the feasibility of participatory democracy in a policy area which commonly has been dominated by experts'' \citep{mccaffery1978participatory}. In this context, our experimental design allows us to test whether voters are receptive to expert policy analysis of ballot referendum policies. 
 
 In line with the partisan and special interest capture theories, as well as evidence that ballot initiatives often lead to policy blunders, our primary hypothesis is that \textit{voters will be equally swayed by information from special interest groups and policy researchers.} More formally, we expect the absolute value of special interest and policy research treatment effects to be statistically indistinguishable from one another.
 
